tests/bad/polymorphic_type_recursion2.ppl
data Thing a = C1 | C2 (Thing (Thing a));

C1


